Fixed global typeface bits not to use Arial since that's evil.

--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -12,7 +12,7 @@ html {
 	background-repeat: repeat-y;
 	
 	font-size: 100%;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
 
 body {
